# ovc-infra

./: .gitattributes  .gitignore  AGENTS.md  ALL_TRACKED_FILES.txt  CHANGELOG_evidence_pack_provenance.md  CHANGELOG_overlays_v0_3.md  CHANGELOG_overlays_v0_3_hardening.md  CODEX.md  GENESIS_LEDGER.tsv  PATH1_EXECUTION_MODEL.md  README.md  TradingView_Alerts_Log_2026-01-14_6bab8.csv  out.err  out.json  package-lock.json  requirements.txt
.codex/: _unittest_done.txt  _unittest_last.txt  config.toml
.github/: copilot-instructions.md  copilot-instructions.txt  pull_request_template.md
CLAIMS/: ANCHOR_INDEX_v0_1.csv  CLAIM_BINDING_v0_1.md
Work Timeline/: 020226.txt
_archive/: README.md
_quarantine/: README.md
artifacts/: change_classifier.json  path1_replay_report.json  repo_census.json
contracts/: derived_feature_set_v0.1.json  eval_contract_v0.1.json  export_contract_v0.1.1_min.json  export_contract_v0.1.1_min_sample.expected.json  export_contract_v0.1.1_min_sample.txt  export_contract_v0.1_full.json  export_contract_v0.1_min.json  run_artifact_spec_v0.1.json
docs/: BUILD_PHASE.md  README_ORG_NOTES.md  (+28 more)
tools/audit_interpreter/: README.md  pyproject.toml
tools/audit_interpreter/src/audit_interpreter/: __init__.py  cli.py  interpret.py
tools/audit_interpreter/src/audit_interpreter/config/: artifact_type_map.json  known_artifact_patterns.json
tools/audit_interpreter/src/audit_interpreter/pipeline/: __init__.py  build_report.py  change_classifier.py  classify_failures.py  detect_seal.py  load_run.py  parse_artifacts.py  scan_artifacts.py  validate_report.py
(+3141 files in other folders)
